--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -28,7 +28,8 @@ body {
 .nav-right {
 	flex: 1;
 	justify-content: flex-end;
-	text-align: right;
+    text-align: right;
+    display: flex;
 }
 
 #search-input {
@@ -49,6 +50,25 @@ body {
 .icon {
     width: 20px;
     height: 20px;
+}
+
+.icon-2 {
+    width: 10px;
+    height: 10px;
+}
+
+.bell{
     filter: invert(100%) sepia(0%) saturate(1506%) hue-rotate(39deg) brightness(113%) contrast(101%);
-    margin-right: 17px;
+}
+
+.icon-glued {
+    margin-right: 15px;
+}
+
+.profile {
+    border-radius: 10px;
+}
+
+@media (max-width: 300px) {
+
 }
