--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,7 +1,5 @@
 body {
-	margin-top: 0px;
-	margin-left: 0px;
-    margin-right: 0px;
+	margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -32,7 +30,7 @@ body {
     display: flex;
 }
 
-#search-input {
+.search-input {
     margin-left: 17px;
     border: 1px solid rgb(60, 68, 76);
 	border-radius: 5px;
@@ -69,6 +67,110 @@ body {
     border-radius: 10px;
 }
 
-@media (max-width: 300px) {
+main {
+    display: flex;
+    max-width: 700px;
+    margin: auto;
+    flex-direction: column;
+}
 
+.profile-section {
+    flex: 0.5;
+    margin-bottom: 30px;
+}
+
+.repository-section {
+    flex: 0.5;
+}
+
+.profile-header {
+    display: flex;
+}
+
+#profile-img {
+    flex: 0.2;
+}
+
+.prof-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+
+#profile-names {
+    flex: 0.8;
+    display: flex;
+    flex-direction: column;
+}
+
+.greyed-out {
+    color: rgb(139, 139, 139);
+}
+
+hr {
+    border: 0;
+    clear:both;
+    display:block;
+    width: 100%;               
+    background-color:rgb(196, 196, 196);
+    height: 1px;
+}
+
+.repo-nav a {
+    color: rgb(78, 85, 94);
+    text-decoration: none;
+    padding: 20px;
+}
+
+#search-repo-input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#search-repo {
+    border: 1px solid rgb(60, 68, 76);
+	border-radius: 5px;
+    background-color:  white;
+    padding: 5px 5px 5px 15px;
+    width: 51em;
+    height: 17px;
+}
+
+.repo-details {
+    display: flex;
+    align-items: center;
+}
+
+#repo-name {
+    flex: 1;
+    color: rgb(0, 92, 208);
+}
+
+#star-repo-btn {
+    background-color : rgb(249, 250, 252);
+    border: 1px solid rgb(92, 92, 92);
+    border-radius: 5px;
+    padding: 5px 15px;
+}
+
+small {
+    margin-right: 20px;
+}
+
+@media (max-width: 800px) {
+    .main-nav a {
+        display: none;
+    }
+
+    #search-input {
+        display: none;
+    }
+
+    .nav-r-two {
+        display: none;
+    }
+
+    .nav-r-three {
+        display: none;
+    }
 }
