--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,3 +1,16 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+box-sizing: inherit;
+}
+
+h1, h4 {
+    margin: 5px 0px;
+    padding: 0px;
+}
+
 body {
 	margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
@@ -34,10 +47,12 @@ body {
     margin-left: 17px;
     border: 1px solid rgb(60, 68, 76);
 	border-radius: 5px;
-    padding: 5px 5px 5px 15px;
     background-color:  rgb(33, 37, 41);
     width: 253px;
     height: 17px;  
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 ::placeholder { 
@@ -75,12 +90,12 @@ main {
 }
 
 .profile-section {
-    flex: 0.5;
+    flex: 1;
     margin-bottom: 30px;
 }
 
 .repository-section {
-    flex: 0.5;
+    flex: 1;
 }
 
 .profile-header {
@@ -124,16 +139,20 @@ hr {
 
 #search-repo-input {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    width: 100%;
 }
 
 #search-repo {
     border: 1px solid rgb(60, 68, 76);
 	border-radius: 5px;
-    background-color:  white;
-    padding: 5px 5px 5px 15px;
-    width: 51em;
+    background-color:  
+    white;
     height: 17px;
+    width: 100%;
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .repo-details {
@@ -173,4 +192,44 @@ small {
     .nav-r-three {
         display: none;
     }
+}
+
+@media (min-width: 900px) {
+    main {
+        display: flex;
+        max-width: 1200px;
+        padding-top: 40px;
+        margin: auto;
+        flex-direction: row;
+    }
+
+    .profile-section {
+        flex: 0.25;
+    }
+    
+    .repository-section {
+        flex: 0.75;
+    }
+
+    .profile-header {
+        flex-direction: column;
+        margin-right: 30px;
+    }
+
+    #profile-img {
+        flex: 1;
+    }
+    
+    .prof-img {
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+    }
+    
+    #profile-names {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
