ADD - Profile picture now responsive. Up Next, Make Nav bar responsive

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -221,9 +221,10 @@ small {
     }
     
     .prof-img {
-        width: 300px;
-        height: 300px;
+        width: 100%;
+        height: auto;        
         border-radius: 50%;
+
     }
     
     #profile-names {
