--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -11,29 +11,58 @@ h1, h4 {
     padding: 0px;
 }
 
+a {
+    text-decoration: none;
+}
+
+hr {
+    border: 0;
+    clear:both;
+    display:block;
+    width: 100%;               
+    background-color:rgb(196, 196, 196);
+    height: 1px;
+}
+
 body {
 	margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#github-logo {
-    width: 32px;
-    height: 32px;
-}
-
 .main-nav {
     padding: 15px 32px 15px 32px;
-	background-color: rgb(33, 37, 41);
-	display: flex;
-	align-items: center;
+    background-color: rgb(33, 37, 41);
+    display: flex;
+    align-items: center;
 }
 
-.main-nav a {
-    color: rgb(247, 247, 247);
-    text-decoration: none;
-    margin-left: 17px;
-    font-size: 14px;
-    font-weight: 600;
+#hamburger {
+    display: none;
+}
+
+.bell-responsive {
+    display: none;
+}
+
+.nav-main {
+    flex: 0.1;
+}
+
+.nav-other {
+    flex: 0.9;
+    display: flex;
+} 
+
+
+.search-input {
+    border: 1px solid rgb(60, 68, 76);
+    border-radius: 5px;
+    background-color:  rgb(33, 37, 41);
+    width: 253px;
+    height: 17px;  
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .nav-right {
@@ -43,16 +72,21 @@ body {
     display: flex;
 }
 
-.search-input {
+.nav-links hr {
+    display: none;
+}
+
+.nav-links a {
+    color: rgb(247, 247, 247);
+    text-decoration: none;
     margin-left: 17px;
-    border: 1px solid rgb(60, 68, 76);
-	border-radius: 5px;
-    background-color:  rgb(33, 37, 41);
-    width: 253px;
-    height: 17px;  
-    padding-left: 25px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+#github-logo {
+    width: 32px;
+    height: 32px;
 }
 
 ::placeholder { 
@@ -122,18 +156,8 @@ main {
     color: rgb(139, 139, 139);
 }
 
-hr {
-    border: 0;
-    clear:both;
-    display:block;
-    width: 100%;               
-    background-color:rgb(196, 196, 196);
-    height: 1px;
-}
-
 .repo-nav a {
     color: rgb(78, 85, 94);
-    text-decoration: none;
     padding: 20px;
 }
 
@@ -177,11 +201,61 @@ small {
 }
 
 @media (max-width: 800px) {
-    .main-nav a {
+    .main-nav {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    
+    
+    .nav-main {
+        flex: 1;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .nav-other {
+        margin-top: 20px;
+        flex: 1;
+        display: none;
+        flex-direction: column;
+    }
+    
+    .nav-other.responsive {
+        float: none;
+        display: flex;
+        text-align: left;
+    }
+    
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .nav-links a {
+        color: white;
+    }
+    
+    #hamburger {
+        display: inline;
+        flex: 1;
+    }
+    
+    #github-logo {
+        flex: 1;
+        text-align: center;
+    }
+    
+    .bell-responsive {
+        display: inline;
+        flex: 1;
+        text-align: right;
+    }
+
+    .icon-2 {
         display: none;
     }
 
-    #search-input {
+    .nav-r-one {
         display: none;
     }
 
@@ -189,9 +263,19 @@ small {
         display: none;
     }
 
-    .nav-r-three {
-        display: none;
+    .search-input {
+        width: 100%;
     }
+
+    .nav-links hr {
+        display: inline;
+    }
+    
+    .nav-right {
+        justify-content: flex-start;
+        text-align: left;
+    }
+
 }
 
 @media (min-width: 900px) {
@@ -232,5 +316,6 @@ small {
         display: flex;
         flex-direction: column;
     }
+
 
 }
