--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -200,7 +200,7 @@ small {
     margin-right: 20px;
 }
 
-@media (max-width: 800px) {
+@media screen and (max-width: 800px) {
     .main-nav {
         flex-direction: column;
         align-items: stretch;
@@ -278,7 +278,7 @@ small {
 
 }
 
-@media (min-width: 900px) {
+@media screen and (min-width: 900px) {
     main {
         display: flex;
         max-width: 1200px;
