--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,321 +1,322 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*, *:before, *:after {
-box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-h1, h4 {
-    margin: 5px 0px;
-    padding: 0px;
+h1,
+h4 {
+  margin: 5px 0px;
+  padding: 0px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 hr {
-    border: 0;
-    clear:both;
-    display:block;
-    width: 100%;               
-    background-color:rgb(196, 196, 196);
-    height: 1px;
+  border: 0;
+  clear: both;
+  display: block;
+  width: 100%;
+  background-color: rgb(196, 196, 196);
+  height: 1px;
 }
 
 body {
-	margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .main-nav {
-    padding: 15px 32px 15px 32px;
-    background-color: rgb(33, 37, 41);
-    display: flex;
-    align-items: center;
+  padding: 15px 32px 15px 32px;
+  background-color: rgb(33, 37, 41);
+  display: flex;
+  align-items: center;
 }
 
 #hamburger {
-    display: none;
+  display: none;
 }
 
 .bell-responsive {
-    display: none;
+  display: none;
 }
 
 .nav-main {
-    flex: 0.1;
+  flex: 0.1;
 }
 
 .nav-other {
-    flex: 0.9;
-    display: flex;
-} 
-
+  flex: 0.9;
+  display: flex;
+}
 
 .search-input {
-    border: 1px solid rgb(60, 68, 76);
-    border-radius: 5px;
-    background-color:  rgb(33, 37, 41);
-    width: 253px;
-    height: 17px;  
-    padding-left: 25px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  border: 1px solid rgb(60, 68, 76);
+  border-radius: 5px;
+  background-color: rgb(33, 37, 41);
+  width: 253px;
+  height: 17px;
+  padding-left: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .nav-right {
-	flex: 1;
-	justify-content: flex-end;
-    text-align: right;
-    display: flex;
+  flex: 1;
+  margin-top: 7px;
+  justify-content: flex-end;
+  text-align: right;
+  display: flex;
 }
 
 .nav-links hr {
-    display: none;
+  display: none;
+}
+
+.nav-links {
+  margin-top: 7px;
 }
 
 .nav-links a {
-    color: rgb(247, 247, 247);
-    text-decoration: none;
-    margin-left: 17px;
-    font-size: 14px;
-    font-weight: 600;
+  color: rgb(247, 247, 247);
+  text-decoration: none;
+  margin-left: 17px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 #github-logo {
-    width: 32px;
-    height: 32px;
+  margin: 0px;
+  padding: 0px;
 }
 
-::placeholder { 
-    color: rgb(199, 200, 201);
-    font-size: 15px;
+::placeholder {
+  color: rgb(199, 200, 201);
+  font-size: 15px;
 }
 
 .icon {
-    width: 20px;
-    height: 20px;
-}
-
-.icon-2 {
-    width: 10px;
-    height: 10px;
-}
-
-.bell{
-    filter: invert(100%) sepia(0%) saturate(1506%) hue-rotate(39deg) brightness(113%) contrast(101%);
+  width: 20px;
+  height: 20px;
 }
 
 .icon-glued {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .profile {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 main {
-    display: flex;
-    max-width: 700px;
-    margin: auto;
-    flex-direction: column;
+  display: flex;
+  max-width: 700px;
+  margin: auto;
+  flex-direction: column;
 }
 
 .profile-section {
-    flex: 1;
-    margin-bottom: 30px;
+  flex: 1;
+  margin-bottom: 30px;
 }
 
 .repository-section {
-    flex: 1;
+  flex: 1;
 }
 
 .profile-header {
-    display: flex;
+  display: flex;
 }
 
 #profile-img {
-    flex: 0.2;
+  flex: 0.2;
 }
 
 .prof-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
 }
 
 #profile-names {
-    flex: 0.8;
-    display: flex;
-    flex-direction: column;
+  flex: 0.8;
+  display: flex;
+  flex-direction: column;
 }
 
 .greyed-out {
-    color: rgb(139, 139, 139);
+  color: rgb(139, 139, 139);
 }
 
 .repo-nav a {
-    color: rgb(78, 85, 94);
-    padding: 20px;
+  color: rgb(78, 85, 94);
+  margin: 0px 20px;
+  padding: 9px;
 }
 
 #search-repo-input {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
 #search-repo {
-    border: 1px solid rgb(60, 68, 76);
-	border-radius: 5px;
-    background-color:  
-    white;
-    height: 17px;
-    width: 100%;
-    padding-left: 25px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  border: 1px solid rgb(60, 68, 76);
+  border-radius: 5px;
+  background-color: white;
+  height: 17px;
+  width: 100%;
+  padding-left: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .repo-details {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #repo-name {
-    flex: 1;
-    color: rgb(0, 92, 208);
+  flex: 1;
+  color: rgb(0, 92, 208);
 }
 
 #star-repo-btn {
-    background-color : rgb(249, 250, 252);
-    border: 1px solid rgb(92, 92, 92);
-    border-radius: 5px;
-    padding: 5px 15px;
+  background-color: rgb(249, 250, 252);
+  border: 1px solid rgb(92, 92, 92);
+  border-radius: 5px;
+  padding: 5px 15px;
 }
 
 small {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
-@media screen and (max-width: 800px), screen and (max-device-width: 800px){
-    .main-nav {
-        flex-direction: column;
-        align-items: stretch;
-    }
-    
-    
-    .nav-main {
-        flex: 1;
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .nav-other {
-        margin-top: 20px;
-        flex: 1;
-        display: none;
-        flex-direction: column;
-    }
-    
-    .nav-other.responsive {
-        float: none;
-        display: flex;
-        text-align: left;
-    }
-    
-    .nav-links {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .nav-links a {
-        color: white;
-    }
-    
-    #hamburger {
-        display: inline;
-        flex: 1;
-    }
-    
-    #github-logo {
-        flex: 1;
-        text-align: center;
-    }
-    
-    .bell-responsive {
-        display: inline;
-        flex: 1;
-        text-align: right;
-    }
-
-    .icon-2 {
-        display: none;
-    }
-
-    .nav-r-one {
-        display: none;
-    }
-
-    .nav-r-two {
-        display: none;
-    }
-
-    .search-input {
-        width: 100%;
-    }
-
-    .nav-links hr {
-        display: inline;
-    }
-    
-    .nav-right {
-        justify-content: flex-start;
-        text-align: left;
-    }
-
+.active-link {
+  border-bottom: 2px solid rgb(235, 158, 17);
 }
 
+/* For the nav bar when shrunk */
+@media screen and (max-width: 800px), screen and (max-device-width: 800px) {
+  .main-nav {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .nav-main {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .nav-other {
+    margin-top: 20px;
+    flex: 1;
+    display: none;
+    flex-direction: column;
+  }
+
+  .nav-other.responsive {
+    float: none;
+    display: flex;
+    text-align: left;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nav-links a {
+    color: white;
+  }
+
+  #hamburger {
+    margin-top: 10px;
+    display: inline;
+    flex: 1;
+  }
+
+  #github-logo {
+    flex: 1;
+    text-align: center;
+  }
+
+  .bell-responsive {
+    margin-top: 10px;
+    display: inline;
+    flex: 1;
+    text-align: right;
+  }
+
+  .icon-2 {
+    display: none;
+  }
+
+  .nav-r-one {
+    display: none;
+  }
+
+  .nav-r-two {
+    display: none;
+  }
+
+  .search-input {
+    width: 100%;
+  }
+
+  .nav-links hr {
+    display: inline;
+  }
+
+  .nav-right {
+    justify-content: flex-start;
+    text-align: left;
+  }
+}
+
+/* For the repo page when expanded */
 @media screen and (min-width: 900px) and (min-device-width: 900px) {
-    main {
-        display: flex;
-        max-width: 1200px;
-        padding-top: 40px;
-        margin: auto;
-        flex-direction: row;
-    }
+  main {
+    display: flex;
+    max-width: 1200px;
+    padding-top: 40px;
+    margin: auto;
+    flex-direction: row;
+  }
 
-    .profile-section {
-        flex: 0.25;
-    }
-    
-    .repository-section {
-        flex: 0.75;
-    }
+  .profile-section {
+    flex: 0.25;
+  }
 
-    .profile-header {
-        flex-direction: column;
-        margin-right: 30px;
-    }
+  .repository-section {
+    flex: 0.75;
+  }
 
-    #profile-img {
-        flex: 1;
-    }
-    
-    .prof-img {
-        width: 100%;
-        height: auto;        
-        border-radius: 50%;
+  .profile-header {
+    flex-direction: column;
+    margin-right: 30px;
+  }
 
-    }
-    
-    #profile-names {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-    }
+  #profile-img {
+    flex: 1;
+  }
 
+  .prof-img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+  }
 
+  #profile-names {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
 }
